# SongWhipBot

./: Cargo.toml  README.md
src/: dto.rs  main.rs
