[package]
name = "songwhip"
version = "0.1.0"
authors = ["Andrey Gedweb Gridchin <andrey.gridchin@mts.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.3.0", features = ["rt-multi-thread", "macros"] }
serde = "1.0"
serde_json = "1.0"

[dependencies.teloxide]
version = "0.4.0"
features = ["macros", "auto-send"]

[dependencies.reqwest]
version = "0.11.3"
